Fixing zoom on mobile. Reverting Montserrat back to old version because it broke the world. (#86)

--- a/CancerGov/_src/Scripts/NCI/Modules/search/_search.scss
+++ b/CancerGov/_src/Scripts/NCI/Modules/search/_search.scss
@@ -37,7 +37,6 @@
 }
 
 #siteSearchForm {
-	margin: 0 0 0 -4px;
 	height: 100%;
 	position: relative;
 }
